--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ products/__pycache__/
 products/migrations/0010_auto_20160528_1907.py
 products/migrations/__pycache__/
 products/templatetags/__pycache__/
+/src/db.sqlite3
