--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ products/migrations/0010_auto_20160528_1907.py
 products/migrations/__pycache__/
 products/templatetags/__pycache__/
 /src/db.sqlite3
+/eski site wayback/
