--- a/web/default.conf
+++ b/web/default.conf
@@ -3,10 +3,17 @@ server {
     listen 80;
     server_name example.com;
     charset utf-8;
+    # set client body size to 8M #
+    client_max_body_size 8M;
 
     location /static/ {
         autoindex on;
         alias /static_in_env/static_root/;
+    }
+
+    location /media/ {
+        autoindex on;
+        alias /static_in_env/media_root/;
     }
 
     location / {
