--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     expose:
       - '8000'
     volumes:
+      - ./app:/app
       - static-data:/static_in_env/static_root/
       - media-data:/static_in_env/media_root/
 
