--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -4,6 +4,6 @@ FROM python:3.5-onbuild
 #ADD . /app
 #WORKDIR "/app"
 #RUN pip install -r requirements.txt
-# RUN SECRET_KEY=tmpkey python manage.py collectstatic --noinput
+RUN SECRET_KEY=tmpkey python manage.py collectstatic --noinput
 #
 #CMD gunicorn ecommerce2.wsgi:application -b 0.0.0.0:8000
