--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -7,8 +7,10 @@ services:
 #    volumes:
 #      - postgres-data:/var/lib/postgresql/data/
 
+
   app:
     build: ./app/
+    image: kemal:istebu
     env_file: .env
     expose:
       - '8000'
@@ -21,6 +23,12 @@ services:
       - media-data:/usr/src/static_in_env/media_root/
     command: /usr/local/bin/gunicorn ecommerce2.wsgi:application -w 2 -b :8000
 
+
+#  media_data:
+#    image: kemal:istebu
+#    build: ./static_in_env/
+
+
   web:
     build: ./web/
     restart: always
@@ -31,6 +39,7 @@ services:
       - media-data:/usr/src/static_in_env/media_root/
     volumes_from:
       - app
+
 
 volumes:
   postgres-data:
