Docker local makinede çalışmıyordu şu anda çalışıyor. Sebepleri:  1-) requirement.txt içerisinde gunicorn yoktu.  2-) settings file olarak sadece manage.py içerisine yazman yetmiyor aynı satırı wsgi.py içerisine  de kopyalamak gerekiyor. Aksi taktirde SECRET_KEY bulamadım, empty SECRET_KEY diyor.

--- a/docker-compose-development.yml
+++ b/docker-compose-development.yml
@@ -9,7 +9,8 @@ services:
 
   app:
     build: ./app/
-    env_file: .env
+    restart: always
+#    env_file: .env
     expose:
       - '8000'
     volumes:
