--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,9 +1,21 @@
 braintree==3.19.0
+data==0.4
+decorator==4.0.9
 Django==1.8.4
-django-crispy-forms==1.5.0
+django-crispy-forms==1.6.0
 django-filter==0.11.0
 django-registration-redux==1.2
-Pillow==2.9.0
+django-taggit==0.21.1
+funcsigs==1.0.2
+importer==1.2
+keen==0.3.22
+Markdown==2.6.6
+Padding==0.4
+Pillow==3.2.0
+pycrypto==2.6.1
+pytz==2016.4
 requests==2.7.0
+six==1.10.0
+
+# Aşağıdaki satırı kurmazsak yarrağı yiyoruz...
 gunicorn==19.3.0
-psycopg2==2.6
