--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -17,5 +17,7 @@ pytz==2016.4
 requests==2.7.0
 six==1.10.0
 
-# Aşağıdaki satırı kurmazsak yarrağı yiyoruz...
+# Aşağıdaki satırı kurmazsak ...ğı yiyoruz...
 gunicorn==19.3.0
+# benzer şekilde postgres için aşağıdaki satırı kurmak lazım
+psycopg2==2.6
