--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -17,6 +17,7 @@ pytz==2016.4
 requests==2.7.0
 six==1.10.0
 django-tinymce==2.4.0
+django-suit==0.2.21
 
 # Aşağıdaki satırı kurmazsak ...ğı yiyoruz...
 gunicorn==19.3.0
