--- a/app/requirements_local_dev.txt
+++ b/app/requirements_local_dev.txt
@@ -1,20 +1,38 @@
+# orijinalde mevcut bende olmayacak sileceğim.
+# ama silince bazı hatalar verecek olsun. bu hataları
+# payment entegrasyonu sırasında düzeltirim.
 braintree==3.19.0
-data==0.4
-decorator==4.0.9
+
+# orijinalde de mevcut silmeyeceğim.
 Django==1.8.4
 django-crispy-forms==1.6.0
 django-filter==0.11.0
 django-registration-redux==1.2
-django-taggit==0.21.1
-funcsigs==1.0.2
-importer==1.2
-keen==0.3.22
-Markdown==2.6.6
-Padding==0.4
 Pillow==3.2.0
-pycrypto==2.6.1
-pytz==2016.4
 requests==2.7.0
-six==1.10.0
+
+# bunu tagler için kullanıyorum.
+django-taggit==0.21.1
+
+# adı üzerinde ama ben pek beğenmedim daha gelişmiş birşey kurmak gerekebilir.
 django-tinymce==2.4.0
+
+#admin panel
 django-suit==0.2.21
+
+#data-importer
+git+https://github.com/valdergallo/data-importer.git@py3k
+# data-importer için gerekli
+six==1.10.0
+
+# bu aşağıdakiler nedir bilmiyorum? o yüzden sildim.
+# data==0.4 --- bunu kaldırınca da çalıştı
+# decorator==4.0.9 --- bunu kaldırınca da çalıştı
+# funcsigs==1.0.2 --- bunu kaldırınca da çalıştı
+# importer==1.2 --- bunu kaldırınca da çalıştı
+# keen==0.3.22 --- bunu kaldırınca da çalıştı
+# Markdown==2.6.6 --- bunu kaldırınca da çalıştı
+# Padding==0.4 --- bunu kaldırınca da çalıştı
+# pycrypto==2.6.1 --- bunu kaldırınca da çalıştı
+# pytz==2016.4 --- bunu kaldırınca da çalıştı
+
