--- a/app/requirements_local_dev.txt
+++ b/app/requirements_local_dev.txt
@@ -25,6 +25,8 @@ git+https://github.com/valdergallo/data-importer.git@py3k
 # data-importer için gerekli
 six==1.10.0
 
+celery-3.1.24
+
 # bu aşağıdakiler nedir bilmiyorum? o yüzden sildim.
 # data==0.4 --- bunu kaldırınca da çalıştı
 # decorator==4.0.9 --- bunu kaldırınca da çalıştı
@@ -35,4 +37,7 @@ six==1.10.0
 # Padding==0.4 --- bunu kaldırınca da çalıştı
 # pycrypto==2.6.1 --- bunu kaldırınca da çalıştı
 # pytz==2016.4 --- bunu kaldırınca da çalıştı
+# six==1.10.0 --- bunu kaldırınca da çalıştı
 
+# installed celery and it came with following :
+# Successfully installed amqp-1.4.9 anyjson-0.3.3 billiard-3.3.0.23 celery-3.1.24 kombu-3.0.37 pytz-2016.7
