--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -21,7 +21,7 @@ django-tinymce==2.4.0
 django-suit==0.2.21
 
 #data-importer
-git+https://github.com/valdergallo/data-importer.git@py3k
+data-importer==3.0.1
 # data-importer için gerekli
 six==1.10.0
 
@@ -31,7 +31,8 @@ gunicorn==19.3.0
 # benzer şekilde postgres için aşağıdaki satırı kurmak lazım
 psycopg2==2.6
 
-celery-3.1.24
+# bu varsa data-importer sapıtıyordu...
+celery==3.1.24
 
 # bu aşağıdakiler nedir bilmiyorum? o yüzden sildim.
 # data==0.4 --- bunu kaldırınca da çalıştı
