--- a/docker-compose-development.yml
+++ b/docker-compose-development.yml
@@ -3,14 +3,16 @@ services:
   postgres:
     image: postgres:9.4
     restart: always
-    env_file: .env
+    env_file:
+      - .env_DEVELOPMENT
     volumes:
       - postgres-data:/var/lib/postgresql/data/
 
   app:
     build: ./app/
     restart: always
-    env_file: .env
+    env_file:
+      - .env_DEVELOPMENT
     expose:
       - '8000'
     volumes:
