--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -4,7 +4,7 @@ services:
     image: postgres:9.4
     restart: always
     env_file:
-      - .env
+      - .env_PRODUCTION
     volumes:
       - postgres-data:/var/lib/postgresql/data/
 
@@ -12,7 +12,7 @@ services:
     build: ./app/
     restart: always
     env_file:
-      - .env
+      - .env_PRODUCTION
     expose:
       - '8000'
     volumes:
