- KDV ve DESİ alanları eklendi - dokcer-compose dosyasından local volume için path düzeltildi

--- a/docker-compose-development.yml
+++ b/docker-compose-development.yml
@@ -16,7 +16,7 @@ services:
     expose:
       - '8000'
     volumes:
-      - ./app:/app
+      - ./app:/usr/src/app
 # yukarıdaki volume ayarını sadece local virtualbox 'larda aç. Yoksa digitalocean vb.
 # cloud 'da asla ve asla çalışmıyor. Django app 'no module named ecommerce2' hatası verip
 # başlayamıyor..
