--- a/.env_PRODUCTION
+++ b/.env_PRODUCTION
@@ -15,7 +15,7 @@ DB_USER=istebupostgr
 DB_PASS=rA55sNYA.?!&3tTS
 DB_SERVICE=postgres
 DB_PORT=5432
-.env
+
 # Django e-mail settings
 EMAIL_HOST=smtp.gmail.com
 EMAIL_HOST_USER=kemal.oztay@gmail.com
@@ -23,7 +23,7 @@ EMAIL_HOST_PASSWORD=xR5lQ9uL
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
 
-# bunu print statementlar  için koydum bakalım olacak mı?
+# bunu print statementlar için koydum 1 olunca çıktıları veriyor.
 PYTHONUNBUFFERED=1
 
 # Paynet etc. payment gateway settings will be here
