--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,50 +1,29 @@
-# orijinalde mevcut bende olmayacak sileceğim.
-# ama silince bazı hatalar verecek olsun. bu hataları
-# payment entegrasyonu sırasında düzeltirim.
+amqp==2.1.1
+anyjson==0.3.3
+billiard==3.5.0.2
 braintree==3.19.0
-
-# orijinalde de mevcut silmeyeceğim.
-Django==1.8.4
+celery==4.0.0
+data-importer==3.0.0
+diff-match-patch==20121119
+Django==1.8.14
+django-celery-beat==1.0.1
+django-celery-results==1.0.1
 django-crispy-forms==1.6.0
 django-filter==0.11.0
+django-import-export==0.5.1
 django-registration-redux==1.2
-Pillow==3.2.0
-requests==2.7.0
-
-# bunu tagler için kullanıyorum.
-django-taggit==0.21.1
-
-# adı üzerinde ama ben pek beğenmedim daha gelişmiş birşey kurmak gerekebilir.
-django-tinymce==2.4.0
-
-#admin panel
 django-suit==0.2.21
-
-#data-importer
-data-importer==3.0.1
-# data-importer için gerekli
+django-taggit==0.21.1
+django-tinymce==2.4.0
+et-xmlfile==1.0.1
+jdcal==1.3
+kombu==4.0.0
+openpyxl==2.4.0
+Pillow==3.2.0
+pytz==2016.7
+redis==2.10.5
+requests==2.7.0
 six==1.10.0
-
-# Aşağıdaki satırı kurmazsak...ğı yiyoruz. django app server bu.
-gunicorn==19.3.0
-
-# benzer şekilde postgres için aşağıdaki satırı kurmak lazım
-psycopg2==2.6
-
-# bu varsa data-importer sapıtıyordu...
-celery==3.1.24
-
-# bu aşağıdakiler nedir bilmiyorum? o yüzden sildim.
-# data==0.4 --- bunu kaldırınca da çalıştı
-# decorator==4.0.9 --- bunu kaldırınca da çalıştı
-# funcsigs==1.0.2 --- bunu kaldırınca da çalıştı
-# importer==1.2 --- bunu kaldırınca da çalıştı
-# keen==0.3.22 --- bunu kaldırınca da çalıştı
-# Markdown==2.6.6 --- bunu kaldırınca da çalıştı
-# Padding==0.4 --- bunu kaldırınca da çalıştı
-# pycrypto==2.6.1 --- bunu kaldırınca da çalıştı
-# pytz==2016.4 --- bunu kaldırınca da çalıştı
-# six==1.10.0 --- bunu kaldırınca da çalıştı
-
-# installed celery and it came with following :
-# Successfully installed amqp-1.4.9 anyjson-0.3.3 billiard-3.3.0.23 celery-3.1.24 kombu-3.0.37 pytz-2016.7
+tablib==0.11.2
+vine==1.1.3
+xlrd==1.0.0
