--- a/docker-compose-development.yml
+++ b/docker-compose-development.yml
@@ -4,7 +4,7 @@ services:
     image: postgres:9.4
     restart: always
     env_file:
-      - .env_DEVELOPMENT
+      - .env_dev
     volumes:
       - postgres-data:/var/lib/postgresql/data/
 
@@ -12,7 +12,7 @@ services:
     build: ./app/
     restart: always
     env_file:
-      - .env_DEVELOPMENT
+      - .env_dev
     expose:
       - '8000'
     volumes:
@@ -34,6 +34,12 @@ services:
       - media-data:/usr/src/static_in_env/media_root/
     volumes_from:
       - app
+
+  redis:
+    image: redis:3.0.7
+    restart: always
+    ports:
+        - "6379"
 
 volumes:
   postgres-data:
