- celery beat, celery worker eklendi...

--- a/.env_PRODUCTION
+++ b/.env_PRODUCTION
@@ -10,6 +10,7 @@ POSTGRES_PASSWORD=rA55sNYA.?!&3tTS
 POSTGRES_DB=istebupgdb
 
 # Django db settings according to the Postgres
+DB_ENGINE=django.db.backends.postgresql_psycopg2
 DB_NAME=istebupgdb
 DB_USER=istebupostgr
 DB_PASS=rA55sNYA.?!&3tTS
@@ -24,6 +25,16 @@ EMAIL_PORT=587
 EMAIL_USE_TLS=True
 
 # bunu print statementlar için koydum 1 olunca çıktıları veriyor.
-PYTHONUNBUFFERED=1
+PYTHONUNBUFFERED=0
 
 # Paynet etc. payment gateway settings will be here
+PAYNET_PUBLISHABLE_KEY=pbk_pcs_TipCY8rx00hQAICpfn2lR52H9cyTa3sV
+PAYNET_SECRET_KEY=sck_pcs_TipCY8rx00h*18iHedwnT7nKC7vkGUso
+PAYNET_TEST_API_URL=https://pts-api.paynet.com.tr
+PAYNET_TEST_PAYNETJS_URL=https://pts-pj.paynet.com.tr/public/js/paynet.min.js
+
+
+# CELERY SETTINGS
+CELERY_BROKER_URL=redis://redis:6379
+
+
