- redis server için dış dünyaya açılan port kapatıldı...

--- a/app/virtualenv_vars.env
+++ b/app/virtualenv_vars.env
@@ -22,7 +22,6 @@ PYTHONUNBUFFERED=1
 # Paynet etc. payment gateway settings will be here
 
 
-
 # CELERY SETTINGS
-CELERY_BROKER_URL=redis://192.168.99.100:32768
-CELERY_RESULT_BACKEND=redis://192.168.99.100:32768
+CELERY_BROKER_URL=redis://139.59.139.108:32773
+CELERY_RESULT_BACKEND='django-db'
