--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -11,15 +11,18 @@ django-celery-results==1.0.1
 django-crispy-forms==1.6.0
 django-filter==0.11.0
 django-import-export==0.5.1
+# django-nested-admin==3.0.12
 django-registration-redux==1.2
 django-suit==0.2.21
 django-taggit==0.21.1
 django-tinymce==2.4.0
+django-uuslug==1.1.8
 et-xmlfile==1.0.1
 jdcal==1.3
 kombu==4.0.0
 openpyxl==2.4.0
 Pillow==3.2.0
+python-monkey-business==1.0.0
 pytz==2016.7
 redis==2.10.5
 requests==2.7.0
