paynet key ve url bilgileri tamamıyla env değerleri olarak revize edildi...

--- a/.env_PRODUCTION
+++ b/.env_PRODUCTION
@@ -32,7 +32,8 @@ PAYNET_PUBLISHABLE_KEY=pbk_pcs_TipCY8rx00hQAICpfn2lR52H9cyTa3sV
 PAYNET_SECRET_KEY=sck_pcs_TipCY8rx00h*18iHedwnT7nKC7vkGUso
 PAYNET_TEST_API_URL=https://pts-api.paynet.com.tr
 PAYNET_TEST_PAYNETJS_URL=https://pts-pj.paynet.com.tr/public/js/paynet.min.js
-
+PAYNET_PRODUCTION_API_URL=https://api.paynet.com.tr
+PAYNET_PRODUCTION_PAYNETJS_URL=https://pj.paynet.com.tr/public/js/paynet.min.js
 
 # CELERY SETTINGS
 CELERY_BROKER_URL=redis://redis:6379
