functional tests eklendi

--- a/app/virtualenv_vars.env
+++ b/app/virtualenv_vars.env
@@ -25,3 +25,6 @@ PYTHONUNBUFFERED=1
 # CELERY SETTINGS
 CELERY_BROKER_URL=redis://139.59.139.108:32773
 CELERY_RESULT_BACKEND='django-db'
+
+
+export PATH=$PATH:/Users/kemal/PycarhmProjects/ecommerce_istebu/app/
