--- a/app/virtualenv_vars.env
+++ b/app/virtualenv_vars.env
@@ -23,7 +23,8 @@ PYTHONUNBUFFERED=1
 
 
 # CELERY SETTINGS
-CELERY_BROKER_URL=redis://139.59.139.108:32773
+CELERY_BROKER_URL=redis://192.168.99.100:32768
+# yukarıya local develeopment değerini gir.
 CELERY_RESULT_BACKEND='django-db'
 
 
