importer en nihayetinde yeniden çalışır hale getirildi. DEBUG = False yapınca oluşan Internal Server Error settings dosyasında olmayan PAYNET_PRODUCTION ile alakalı settingslerden kaynaklanıyormuş.

--- a/.env_PRODUCTION
+++ b/.env_PRODUCTION
@@ -1,3 +1,5 @@
+DJANGO_SETTINGS_MODULE=ecommerce2.settings
+
 # http://www.miniwebtool.com/django-secret-key-generator/
 SECRET_KEY=d!qmv1bs^e3)4(0p#=d=!gap^$b8vlm7*6=bfn&mgh^6p8@dpp
 
