--- a/core-os-cloud-config.yml
+++ b/core-os-cloud-config.yml
@@ -3,7 +3,7 @@
 coreos:
   etcd2:
     # generate a new token for each unique cluster from https://discovery.etcd.io/new:
-    discovery: https://discovery.etcd.io/<discovery_token>
+    discovery: https://discovery.etcd.io/19f23f62401ca162bc8f831d84538d1d
     # multi-region deployments, multi-cloud deployments, and Droplets without
     # private networking need to use $public_ipv4:
     advertise-client-urls: http://$private_ipv4:2379,http://$private_ipv4:4001
