ilk defa environment variable kullanımında hata oluşumunu çözdüm

--- a/.env_PRODUCTION
+++ b/.env_PRODUCTION
@@ -1,12 +1,5 @@
-DJANGO_SETTINGS_MODULE=ecommerce2.settings
 
-# http://www.miniwebtool.com/django-secret-key-generator/
-SECRET_KEY=d!qmv1bs^e3)4(0p#=d=!gap^$b8vlm7*6=bfn&mgh^6p8@dpp
-
-# Bunu False yapacağız...
-DEBUG=False
-
-# Postgres db variables
+# PostgreSQL
 POSTGRES_USER=istebupostgr
 POSTGRES_PASSWORD=rA55sNYA.?!&3tTS
 POSTGRES_DB=istebupgdb
@@ -19,12 +12,44 @@ DB_PASS=rA55sNYA.?!&3tTS
 DB_SERVICE=postgres
 DB_PORT=5432
 
-# Django e-mail settings
+# General settings
+DJANGO_ADMIN_URL=istebu_backend_ax476sxc
+DJANGO_SETTINGS_MODULE=ecommerce2.settings
+DJANGO_SECRET_KEY=d!qmv1bs^e3)4(0p#=d=!gap^$b8vlm7*6=bfn&mgh^6p8@dpp
+# http://www.miniwebtool.com/django-secret-key-generator/
+DJANGO_ALLOWED_HOSTS=[istebu.com,192.168.99.101,207.154.202.179]
+DJANGO_DEBUG=True
+
+# AWS Settings
+DJANGO_AWS_ACCESS_KEY_ID=
+DJANGO_AWS_SECRET_ACCESS_KEY=
+DJANGO_AWS_STORAGE_BUCKET_NAME=
+
+# Used with email
+DJANGO_MAILGUN_API_KEY=pubkey-d53cf49d52961826a96d8491f205633d
+DJANGO_SERVER_EMAIL=
+MAILGUN_SENDER_DOMAIN=
+
+# Django e-mail settings aşağıdakileri silip mailgun ile çalışacak şekle getir.
 EMAIL_HOST=smtp.gmail.com
 EMAIL_HOST_USER=kemal.oztay@gmail.com
 EMAIL_HOST_PASSWORD=xR5lQ9uL
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
+
+# Security! Better to use DNS for this task, but you can use redirect
+DJANGO_SECURE_SSL_REDIRECT=False
+
+# django-allauth
+DJANGO_ACCOUNT_ALLOW_REGISTRATION=True
+# Sentry
+DJANGO_SENTRY_DSN=
+
+DJANGO_OPBEAT_ORGANIZATION_ID
+DJANGO_OPBEAT_APP_ID
+DJANGO_OPBEAT_SECRET_TOKEN
+
+COMPRESS_ENABLED=
 
 # bunu print statementlar için koydum 1 olunca çıktıları veriyor.
 PYTHONUNBUFFERED=0
