.env_PRODUCTION 'da DEBUG=False yapıldı.

--- a/.env_PRODUCTION
+++ b/.env_PRODUCTION
@@ -18,7 +18,7 @@ DJANGO_SETTINGS_MODULE=ecommerce2.settings
 DJANGO_SECRET_KEY=d!qmv1bs^e3)4(0p#=d=!gap^$b8vlm7*6=bfn&mgh^6p8@dpp
 # http://www.miniwebtool.com/django-secret-key-generator/
 DJANGO_ALLOWED_HOSTS=[istebu.com,192.168.99.101,207.154.202.179]
-DJANGO_DEBUG=True
+DJANGO_DEBUG=False
 
 # AWS Settings
 DJANGO_AWS_ACCESS_KEY_ID=
