production server'da image downloading başarılı olarak test edildi.

--- a/.env_EXAMPLE
+++ b/.env_EXAMPLE
@@ -1,21 +1,21 @@
 
 # PostgreSQL
-POSTGRES_USER=istebupostgr
-POSTGRES_PASSWORD=rA55sNYA.?!&3tTS
-POSTGRES_DB=istebupgdb
+POSTGRES_USER=postgres_user_name
+POSTGRES_PASSWORD=postgres_password
+POSTGRES_DB=postgres_dbname
 
 # Django db settings according to the Postgres
 DB_ENGINE=django.db.backends.postgresql_psycopg2
-DB_NAME=istebupgdb
-DB_USER=istebupostgr
-DB_PASS=rA55sNYA.?!&3tTS
+DB_NAME=postgres_dbname
+DB_USER=postgres_user_name
+DB_PASS=postgres_password
 DB_SERVICE=postgres
 DB_PORT=5432
 
 # General settings
-DJANGO_ADMIN_URL=istebu_backend_ax476sxc
+DJANGO_ADMIN_URL=change_admin_url_to_something_unpredictable
 DJANGO_SETTINGS_MODULE=ecommerce2.settings
-DJANGO_SECRET_KEY=d!qmv1bs^e3)4(0p#=d=!gap^$b8vlm7*6=bfn&mgh^6p8@dpp
+DJANGO_SECRET_KEY=your_secret_key
 # http://www.miniwebtool.com/django-secret-key-generator/
 DJANGO_ALLOWED_HOSTS=[istebu.com,192.168.99.101,207.154.202.179]
 DJANGO_DEBUG=False
@@ -26,14 +26,14 @@ DJANGO_AWS_SECRET_ACCESS_KEY=
 DJANGO_AWS_STORAGE_BUCKET_NAME=
 
 # Used with email
-DJANGO_MAILGUN_API_KEY=pubkey-d53cf49d52961826a96d8491f205633d
+DJANGO_MAILGUN_API_KEY=
 DJANGO_SERVER_EMAIL=
 MAILGUN_SENDER_DOMAIN=
 
 # Django e-mail settings aşağıdakileri silip mailgun ile çalışacak şekle getir.
 EMAIL_HOST=smtp.gmail.com
-EMAIL_HOST_USER=kemal.oztay@gmail.com
-EMAIL_HOST_PASSWORD=xR5lQ9uL
+EMAIL_HOST_USER=your gmail
+EMAIL_HOST_PASSWORD=your password
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
 
@@ -55,8 +55,8 @@ COMPRESS_ENABLED=
 PYTHONUNBUFFERED=0
 
 # Paynet etc. payment gateway settings will be here
-PAYNET_PUBLISHABLE_KEY=pbk_pcs_TipCY8rx00hQAICpfn2lR52H9cyTa3sV
-PAYNET_SECRET_KEY=sck_pcs_TipCY8rx00h*18iHedwnT7nKC7vkGUso
+PAYNET_PUBLISHABLE_KEY=paynet_publishable_key
+PAYNET_SECRET_KEY=paynet_secret_key
 PAYNET_TEST_API_URL=https://pts-api.paynet.com.tr
 PAYNET_TEST_PAYNETJS_URL=https://pts-pj.paynet.com.tr/public/js/paynet.min.js
 PAYNET_PRODUCTION_API_URL=https://api.paynet.com.tr
