image downloader max_length nedenyiyle store edememiş. max_lenght arttırıldı...

--- a/.env_EXAMPLE
+++ b/.env_EXAMPLE
@@ -17,7 +17,7 @@ DJANGO_ADMIN_URL=change_admin_url_to_something_unpredictable
 DJANGO_SETTINGS_MODULE=ecommerce2.settings
 DJANGO_SECRET_KEY=your_secret_key
 # http://www.miniwebtool.com/django-secret-key-generator/
-DJANGO_ALLOWED_HOSTS=[istebu.com,192.168.99.101,207.154.202.179]
+DJANGO_ALLOWED_HOSTS=istebu.com,192.168.99.101,207.154.202.179
 DJANGO_DEBUG=False
 
 # AWS Settings
