--- a/dev.yml
+++ b/dev.yml
@@ -1,14 +1,18 @@
 version: '2'
 
-services:
+volumes:
+  postgres_data: {}
+  postgres_backup: {}
+  static-data: {}
+  media-data: {}
 
+services:
   postgres:
-    image: postgres:9.4
-    restart: always
-    env_file:
-      - .env_dev
+    build: ./compose/postgres
     volumes:
-      - postgres-data:/var/lib/postgresql/data/
+      - postgres_data:/var/lib/postgresql/data
+      - postgres_backup:/backups
+    env_file: .env_dev
 
   app:
     build: ./app/
